# td

./: .gitignore  .td-build-cache  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  DIGESTS.md  HISTORY.md  M10-design.md  Makefile  PLAN.md  channels.scm  check.sh  p
.github/: BRANCH-PROTECTION.md  setup-branch-protection.sh
.github/ISSUE_TEMPLATE/: work-item.md
.github/workflows/: ci-image.yml  ci.yml  daily.yml  heal-main.yml  td-sh.yml
.td-offline-scratch/: log.txt
.td-offline-scratch/b/: closure.txt  registration  td.db
builder/: .gitignore  Cargo.toml  build.rs
builder/src/: affected.rs  bootstrap.rs  build.rs  build_daemon.rs  bzip2.rs  check_loop.rs  daemon.rs  daily.rs  drv.rs  elf.rs  erofs.rs  gate_bodies.rs  gate_inputs.rs  gate_lint.rs  gate_timing.rs  gates.rs  gzip.rs  json.rs  lock.rs  main.rs  mes_boot.rs  nar.rs  oci.rs  sandbox.rs  scan.rs  sha256.rs  stage0.rs  store.rs  store_db.rs  store_db_read.rs  sys.rs  tar.rs  tcc_boot.rs  toolchain_x86_64.rs  xz.rs
builder/src/gate_defs/: 010-eval.rs  070-guix-dependence.rs  072-guix-surface.rs  118-oci-native.rs  122-rust-userland-image.rs  170-bootstrap.rs  171-stage0-cold-start.rs  172-provision-rust.rs  173-provision-cc.rs  174-chain-cache.rs  175-td-builder.rs  176-stage0-cache-gc.rs  207-recipe-rs.rs  220-corpus-no-guix.rs  220-recipe-checks.rs  222-recipe-checks-daily.rs  222-toolchain-no-guix.rs  224-corpus-deps-no-guix.rs  226-pkg-config-no-guix.rs  235-td-drv-build.rs  250-td-check.rs  255-resolve.rs  265-loop-sandbox.rs  270-loop-rung.rs  272-sandbox-hardening.rs  275-store-register.rs  280-store-add.rs  285-store-add-tree.rs  290-store-gc.rs  295-store-verify.rs  300-store-gc-sweep.rs  305-store-add-referenced.rs  310-store-backend.rs  325-cargo-test.rs  330-rust-build.rs  335-rust-vendor.rs  340-rust-uutils.rs  343-rust-coreutils.rs  344-rust-youki.rs  345-rust-russh.rs  (+77 more)
ci/: build-ci-image.sh  channel-instance-drv.scm  daily-backstop.md  daily-full-suite.sh  drv-outputs.scm  host-guix-shim.scm  import-store.sh  lower-check-drvs.sh  lower-fast-drvs.scm  lower-fast-drvs.sh  revert-suspect.sh  system-test-drvs.scm  verify-import-local.sh
engine/: Cargo.toml
engine/src/: json.rs  lib.rs  sha256.rs
feed/: Cargo.toml
feed/src/: main.rs
fetch/: Cargo.toml
fetch/src/: main.rs
issues/: README.md  TEMPLATE.md
issues/closed/: 0546-daily-backstop-red.md  0554-migrate-off-github.md  0555-feed-warm-sources-single-egress.md  0556-daily-cargo-test-sandbox-shell.md  0557-rust-toolchain-libgcc-s.md  0558-explicit-clear-store.md
mk/: harness.mk
mk/gates/: 005-plan-index.mk  010-eval.mk  (+172 more)
net/: .gitignore  Cargo.toml
net/src/: feed.rs  fetch.rs  main.rs  subst.rs
plan/: affected-checks-engine.md  affected-checks-rs.md  amortize-vm-boots.md  auto-plan.md  bootstrap-recipes-rs.md  bootstrap-td-builder.md  bootstrap-ts-eval.md  build-check-split.md  build-plan.md  build-resource-caps.md  cargo-test-gate.md  cat-uutils-crate-free.md  chain-less.md  check-memo.md  ci-gate.md  cmake-build-system.md  corpus-crate-free-diverge.md  corpus-crate-free-rest.md  corpus-crate-free.md  corpus-independence.md  corpus-leaf-recipes.md  corpus-store-native.md  crate-guix-free.md  daemon-td-drv.md  design-check-tiers-sync.md  edge-owned-23.md  elf-set-rpath.md  evaluator-as-library.md  fast-check.md  feed-shared.md  fhs-app-images.md  guix-builder-route.md  guix-free-seed.md  guix-packager-ratchet.md  honesty-fixes.md  host-sandbox-stage0.md  independence-metric.md  input-recipes.md  input-resolution.md  loop-latency.md  (+57 more)
recipes/: Cargo.toml  build.rs
scripts/: cloud-guix-setup.README.md  cloud-guix-setup.sh  cloud-guix-warm.sh  session-start.hook.template
seed/: control-plane-seed-pins.txt  seed-digests.txt  stage0-3b9c2bb.tar
sh/: Cargo.toml
sh/src/: main.rs
sh/tests/: scripts.rs
subst/: Cargo.toml
subst/src/: main.rs
system/: td-build.scm  td-builder.scm  td-corpus.scm  td-disk.scm  td-generation.scm  td-hardening.scm  td-place.scm  td-place.sh  td-recipe.scm  td-registry.scm  td-ts.scm  td-typed.scm  td-verity.scm  td.scm
td-kexec/: .gitignore  Cargo.toml
td-kexec/src/: main.rs
tests/: bash-x86_64-store-native.sh  boot-native-drv.scm  boot-native.sh  boot.scm  bootstrap-binutils-244-store-native.sh  bootstrap-binutils-gawk-mesboot.sh  bootstrap-binutils-mesboot1.sh  bootstrap-binutils.sh  bootstrap-cc.sh  bootstrap-chain.sh  bootstrap-gcc-14-store-native.sh  bootstrap-gcc-core-mesboot1.sh  bootstrap-gcc-mesboot-494-store-native.sh  bootstrap-gcc-mesboot-wrapper.sh  bootstrap-gcc-mesboot.sh  bootstrap-gcc-mesboot0.sh  bootstrap-gcc-mesboot1.sh  bootstrap-gcc.sh  bootstrap-glibc-241-store-native.sh  bootstrap-glibc-mesboot.sh  bootstrap-glibc-shared-store-native.sh  bootstrap-glibc.sh  bootstrap-hello-corpus-store-native.sh  bootstrap-hello-userland.sh  bootstrap-make-mesboot.sh  bootstrap-make.sh  bootstrap-mes.sh  bootstrap-mescc.sh  bootstrap-patch.sh  bootstrap-sed-corpus-store-native.sh  bootstrap-seed.sh  bootstrap-sqlite-corpus-store-native.sh  bootstrap-tcc.sh  bootstrap-toolchain-store-native.sh  bootstrap-tools.sh  bootstrap-x86_64-native-gcc-store-native.sh  bootstrap-x86_64-self-gcc-store-native.sh  bootstrap-x86_64-toolchain-store-native.sh  build-hermetic-drv.scm  build-pkg.sh  (+138 more)
tests/cmake-demo/: CMakeLists.txt  hello.c
tests/vendor-demo/: Cargo.toml
tests/vendor-demo/src/: main.rs
tools/: affected-checks.sh  bootstrap-td-builder.sh  build-daemon-ensure.sh  build-seed-tarball.sh  check-rung.sh  feed-ensure.sh  gate-time.sh  gate-timing-report.sh  gen-feed-index.sh  guix-lower.sh  loop-toolchain.txt  plan-index.sh  provision-cc.sh  provision-rust.sh  publish-harness-subst.sh  publish-seed-subst.sh  publish-toolchain-subst.sh  resolve-harness.sh  resolve-seed.sh  resolve-toolchain.sh  td-system-lock-regen.sh  warm-bootstrap-sources.sh  warm-cargo-proxy-local.sh  warm-cargo-proxy.sh  warm-kernel-headers-x86_64.sh  warm-kernel-headers.sh  warm-rust-upstream.sh  warm-seed.sh  warm-stage0-seed.sh  warm-subst.sh  warm-td-fetch-crates.sh  warm-tsgo.sh
ts-eval/: Cargo.toml
(+453 files in other folders)
