[package]
name = "td-builder"
version = "0.1.0"
edition = "2021"
description = "td's own builder — executes a .drv in a user-namespace sandbox and registers the output (DESIGN §7.1)"
license = "GPL-3.0-or-later"

[[bin]]
name = "td-builder"
path = "src/main.rs"

# S1 is the toolchain probe: no dependencies, so the crate compiles OFFLINE in
# the check.sh sandbox with nothing fetched. Dependencies arrive later (S2+) and
# must be free crates vendored through the pinned channel (FSDG).

# Rust coding rules (AGENTS.md → "Rust code"): deny the panic/indexing/unsafe
# surface for NEW code. Existing files carry a per-file `#![allow(...)]`
# grandfather header (remove it when the file is cleaned). The cargo-test gate's clippy leg
# runs `cargo clippy` over this crate offline; a denied lint reds the gate.
[lints.rust]
# unsafe is confined to the raw-syscall layer (src/sys.rs) and its two callers
# (nar.rs, sandbox.rs), which each carry `#![allow(unsafe_code)]`. No other file
# may add unsafe — deny (not forbid) so those three can opt back in.
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"       # no panicking .unwrap(); return Result/Option, use ?
expect_used = "deny"       # no panicking .expect()
panic = "deny"             # no panic! on the happy/error path
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"  # use .get(i) over xs[i] / &xs[a..b]

[profile.release]
# Keep the release profile explicit and minimal so the reproducibility oracle
# (`guix build --check`) has a stable target as the binary grows.
