[package]
name = "td-sh"
version = "0.1.0"
edition = "2021"
description = "td's seed shell — the brush bash-compatible shell wrapped as a td binary, so bootstrap rungs can stop taking sh/bash from the host (re #469)"
license = "GPL-3.0-or-later"
# The floor is brush's MSRV (brush crates are edition-2024 Rust).
rust-version = "1.88"

[[bin]]
name = "td-sh"
path = "src/main.rs"

[dependencies]
# THE reviewed dependency this crate exists for (AGENTS.md "Rust code": a new
# dependency is never casual): brush, the pure-Rust bash-compatible shell (MIT,
# no C-source crates in its tree). This crate is a SEED TOOL like the network
# tools tier — it is NOT the engine; builder/ and recipes/ stay at zero crates
# and the cargo-test gate still enforces that. default-features off drops the
# optional extras; "minimal" keeps a non-interactive input backend (on Linux
# the interactive backends ride in via brush-shell's unix target-deps
# regardless — td uses the binary strictly non-interactively as the bootstrap
# build shell).
brush-shell = { version = "0.4.0", default-features = false, features = ["minimal"] }

# Rust coding rules (AGENTS.md → "Rust code"). The wrapper is a single call into
# brush-shell's CLI entry; the [lints] posture matches the other td crates. (The
# cargo-test gate's clippy leg lints only the dependency-free engine crates
# offline; these fire under a local `cargo clippy`.)
[lints.rust]
unsafe_code = "forbid"     # no unsafe in the seed shell wrapper

[lints.clippy]
unwrap_used = "deny"       # no panicking .unwrap(); return Result/Option, use ?
expect_used = "deny"       # no panicking .expect()
panic = "deny"             # no panic! on the happy/error path
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"  # use .get(i) over xs[i] / &xs[a..b]
